...
                                    viewModel.tableDataModel.selectAllRows()
                                } else {
                                    viewModel.tableDataModel.emptySelection()
                                }
                            }
                            .disabled(viewModel.tableDataModel.rowOrder.count == 0)
                            .accessibilityIdentifier("SelectAllRowSelectorButton")
                    }
                    Text("#")
                        .frame(width: 40, height: 60)
                        .border(Color.tableCellBorderColor)
                    if viewModel.tableDataModel.canShowSingleClickEditColumn() {
                        Image(systemName: "square.and.pencil")
...
                            .frame(width: 40, height: 60)
                            .background(Color.rowSelectionBackground(isSelected: isRowSelected, colorScheme: colorScheme))
                            .border(Color.tableCellBorderColor)
                            .onTapGesture {
                                viewModel.tableDataModel.toggleSelection(rowID: rowArray.first?.rowID ?? "")
                            }
                            .accessibilityIdentifier("MyButton")
                        
                    }
                    Text("\(index+1)")
                        .foregroundColor(.secondary)
                        .font(.caption)
                        .frame(width: 40, height: 60)
...
