...
            Text(cellModel.data.title)
                .font(.system(size: 15))
                .lineLimit(1)
        } else {
                ScrollView {
                    Text(cellModel.data.title)
                        .accessibilityIdentifier("TabelBlockFieldIdentifier")
                        .font(.system(size: 15))
                        .frame(maxWidth: .infinity, alignment: .leading)
                        .padding(.all, 8)
                }
        }
    }
...
